style/style.css
/* Reset */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}

/* Sezioni */

header {
    background-color: white;
    padding: 20px 20px;
}

body {
    background-color: #f6f8f9;
    width: 100%;
    height: 100%;
}

main {
    margin: 50px 200px;
    background-color: white;
    border-radius: 8px;
}

hr {
    background-color: #f6f8f9;; 
    height: 3px; 
    border: 0;
}

ul {
    list-style-type: none;
}

li {
    color: #41454e;
    font-size: 1.3rem;
    line-height: 2rem;
    margin-top: 10px;
    margin-bottom: 15px;
}

/* Titoli */

h1 {
    font-size: 3rem;
}

h2 {
    color: #41454e;
}

/* header  */
#toboo-header-logo {
    width: 70px;
    vertical-align: middle;
}

.white-square-paddings {
    padding: 20px 60px
}

.header-logo {
    display: inline-block;
    line-height: 70px;
    vertical-align: middle;
}

/* Pulsanti */
.buttons-section {
    margin-bottom: 5px;
}

.blue-button {
    font-weight: bold;
    color: white;
    height: 30px;
    width: 80px;
    border-radius: 5px;
    border: 0;
    background-color: #47adf1;
}

.white-button {
    font-weight: bold;
    color: lightgrey;
    height: 30px;
    width: 100px;
    border-radius: 5px;
    border: solid 1.5px lightgrey;
    background-color: white;

}

/* Check e Cross della lista  */
.list-check {
    display: inline-block;
    width: 24px;
    height: 24px;
    border-radius: 12px;
    text-align: center;
    vertical-align: middle;
    font-size: 0.8em;
    line-height: 24px;
    color: #5bbba3;
    border: solid 1.5px #5bbba3;
    margin-right: 10px;
}

.list-cross {
    display: inline-block;
    width: 24px;
    height: 24px;
    border-radius: 12px;
    text-align: center;
    vertical-align: middle;
    font-size: 0.8em;
    line-height: 24px;
    color: #ed7670;
    border: solid 1.5px #ed7670;
    margin-right: 10px;
}

/* Tag delle task */
.list-tag {
    color: white;
    font-size: 0.7rem;
    border-radius: 10px;
    padding: 6px 10px;
}

/* Colori Tag delle task */
.tag-blue {
    background-color: #47adf1;
}

.tag-purple {
    background-color: #9c72e4;
}

.tag-green {
    background-color: #64c0a9;
}

.tag-orange {
    background-color: #f29e33;
}

.tag-pink {
    background-color: #d863a1;
}

.tag-lime {
    background-color: #b0c926;
}

